--- a/public/about.html
+++ b/public/about.html
@@ -157,9 +157,9 @@
         >
           <h3 class="txt-caption txt-primary text-left">About Us</h3>
           <p class="txt-hero text-left">
-            Logistix is a representative logistic operator, providing full range
+            Logistix Global Express Delivery is a representative logistic operator, providing full range
             of delivery services for individual, cooperate and industrial
-            company. We are currently available in 26 African countries, giving
+            company. We are currently available in 26 countries, giving
             the best of the best services through our well trained staffs.
           </p>
         </div>
@@ -224,39 +224,36 @@
       >
         <div class="card">
           <img
-            src="./img/about/girl-bridge.png"
+            src="https://iprospect.azureedge.net/-/media/Local/Global/About-Us/Our-Team/2019/brandon-smith.ashx?rev=b2749c0c313b4912b9cbbc520ec4fcaf&h=944&w=675&la=en&hash=21B3F21F9D203EF8C1575A514AEB63F7"
             class="card-img-top"
             alt="..."
           />
           <div class="card-body text-center">
-            <h5 class="card-title txt-large txt-dark">Nike Air</h5>
+            <h5 class="card-title txt-large txt-dark">Kenneth Stephens</h5>
             <p class="card-text txt-dark txt">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-              nunc id varius nunc.
+              Mr Kenneth Stephens has 28 years’ experience in corporate finance. He has an MS in International Finance and Accounting from The London School of Economics and Political Science
             </p>
           </div>
         </div>
         <div class="card mx-md-5 my-5 my-md-0">
-          <img src="./img/about/boy.png" class="card-img-top" alt="..." />
+          <img src="https://iprospect.azureedge.net/-/media/Local/Global/About-Us/Our-Team/2019/misty-locke---iprospect.ashx?rev=15db36db038d4ca9864b7194f41838b0&h=944&w=675&la=en&hash=3225EEEA615075D24E9465DCD9B4508D" class="card-img-top" alt="..." />
           <div class="card-body text-center">
-            <h5 class="card-title txt-large txt-dark">Adedeji Abiola</h5>
+            <h5 class="card-title txt-large txt-dark">Lauranne Simpson</h5>
             <p class="card-text txt txt-dark">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-              nunc id varius nunc.
+              Mrs. Lauranne Simpson has 22 years of relevant professional experience. She joined the organization in February 2017 and has significant transaction experience across multiple industries
             </p>
           </div>
         </div>
         <div class="card">
           <img
-            src="./img/about/girl-office.png"
+            src="https://iprospect.azureedge.net/-/media/Local/Global/About-Us/Our-Team/2019/des-bateman.ashx?rev=5af5cff04a41496bbe268c868e28bc40&h=944&w=675&la=en&hash=E34D978C50E8CDDBDC221F6F7CFD4005"
             class="card-img-top"
             alt="..."
           />
           <div class="card-body text-center">
-            <h5 class="card-title txt-large txt-dark">Folashade Omidiora</h5>
+            <h5 class="card-title txt-large txt-dark">David Crooks</h5>
             <p class="card-text txt txt-dark">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-              nunc id varius nunc.
+              Mr David has overall responsibility for all matters relating to accounting, financial control, taxation, fund administration and reporting and regulatory compliance for the organization
             </p>
           </div>
         </div>
@@ -273,7 +270,7 @@
               alt="logo"
             />
             <p class="footer-text">
-              Logistix is a representative logistic operator, providing full
+              Logistix Global Express Delivery is a representative logistic operator, providing full
               range of delivery services for individual, cooperate and
               industrial company. We are currently available in 26 African
               countries, giving the best of the best services through our well
