--- a/public/contact.html
+++ b/public/contact.html
@@ -165,7 +165,7 @@
           <div class="mb-3">
             <img src="./img/contact/email 1.png" alt="" />
             <h5 class="font-bold capitalize">our email</h5>
-            <p class="capitalize">info@logistix.org</p>
+            <p class="capitalize">info@Logistix Global Express Delivery.org</p>
           </div>
           <div class="w-1/2 md:w-auto mb-3">
             <img src="./img/contact/phone-call 1.png" alt="" />
@@ -235,7 +235,7 @@
               alt="logo"
             />
             <p class="footer-text">
-              Logistix is a representative logistic operator, providing full
+              Logistix Global Express Delivery is a representative logistic operator, providing full
               range of delivery services for individual, cooperate and
               industrial company. We are currently available in 26 African
               countries, giving the best of the best services through our well
