--- a/public/index.html
+++ b/public/index.html
@@ -135,12 +135,7 @@
             <a class="nav-link" href="./contact.html">Contact</a>
           </li>
 
-          <li class="nav-item">
-            <a class="text-white nav-link" href="./sign-in.html">Sign In</a>
-          </li>
-          <li class="nav-item">
-            <a class="btn_1 text-white" href="./sign-in.html">Sign Up</a>
-          </li>
+
         </ul>
       </div>
     </header>
@@ -158,7 +153,7 @@
             the best platform for transport and delivery solutions
           </h3>
           <p class="mt-3 mb-5">
-            Logistix provides full range of transportation, logistics and
+            Logistix Global Express Delivery provides full range of transportation, logistics and
             courier services worldwide
           </p>
           <div
@@ -208,14 +203,14 @@
           <div class="col-md-5 text-white px-4 mobile_margin">
             <h2 class="text-capitalize mt-4 mb-4 pt-5">about us</h2>
             <p class="details mb-4 text">
-              Logistix is a representative logistic operator, providing full
+              Logistix Global Express Delivery is a representative logistic operator, providing full
               range of delivery services for individual, cooperate and
-              industrial company. We are currently available in 26 African
+              industrial company. We are currently available in 26
               countries, giving the best of the best services through our well
               trained staffs.
             </p>
             <div class="btn-big col-md-12 col-lg-7 text-capitalize text-center">
-              <a href="./about.html">our services</a>
+              <a href="./about.html">about us</a>
             </div>
           </div>
         </div>
@@ -260,9 +255,7 @@
                   We have well coordinated transportation to help you deliver
                   your heavy duties.
                 </p>
-                <a href="#" class="btn btn-link text-left p-0 pb-5"
-                  >Read More</a
-                >
+
               </div>
 
               <div
@@ -280,9 +273,7 @@
                   For fast track services, our dispatch service have you
                   covered.
                 </p>
-                <a href="#" class="btn btn-link text-left p-0 pb-5"
-                  >Read More</a
-                >
+
               </div>
             </div>
             <div
@@ -300,9 +291,7 @@
                 <p>
                   We provide door to door delivery of consumer good with love
                 </p>
-                <a href="#" class="btn btn-link text-left p-0 pb-5"
-                  >Read More</a
-                >
+
               </div>
 
               <div
@@ -317,11 +306,9 @@
                 />
                 <h5 class="mt-4">Ware Housing</h5>
                 <p>
-                  We have warehouse located at different location across Africa.
+                  We have warehouse located at different location across the world.
                 </p>
-                <a href="#" class="btn btn-link text-left p-0 pb-5"
-                  >Read More</a
-                >
+
               </div>
             </div>
           </div>
@@ -340,79 +327,10 @@
     <section class="delivery service_delivery_padding" id="request-quote">
       <div class="container-md">
         <div class="row">
-          <div class="col-sm-12 col-lg-5 card mb-5 mb-lg-0">
-            <h5 class="card-header text-center p-4">
-              request a quote
-            </h5>
-            <div class="card-body">
-              <form>
-                <div class="form-row">
-                  <div class="form-group col-md-6">
-                    <input
-                      type="text"
-                      class="form-control form-control-lg"
-                      placeholder="Name"
-                    />
-                  </div>
-                  <div class="form-group col-md-6">
-                    <input
-                      type="email"
-                      class="form-control form-control-lg"
-                      placeholder="Email"
-                    />
-                  </div>
-                  <div class="form-group col-md-6">
-                    <input
-                      type="text"
-                      class="form-control form-control-lg"
-                      placeholder="Phone"
-                    />
-                  </div>
-                  <div class="form-group col-md-6">
-                    <input
-                      type="text"
-                      class="form-control form-control-lg"
-                      placeholder="Subject"
-                    />
-                  </div>
-                  <div class="form-group col-md-6">
-                    <input
-                      type="text"
-                      class="form-control form-control-lg"
-                      placeholder="From"
-                    />
-                  </div>
-                  <div class="form-group col-md-6">
-                    <input
-                      type="text"
-                      class="form-control form-control-lg"
-                      placeholder="To"
-                    />
-                  </div>
-                  <div class="form-group col-md-6">
-                    <input
-                      type="text"
-                      class="form-control form-control-lg"
-                      placeholder="Delivery type"
-                    />
-                  </div>
-                  <div class="form-group col-md-6">
-                    <input
-                      type="text"
-                      class="form-control form-control-lg"
-                      placeholder="Weight"
-                    />
-                  </div>
-                </div>
-                <button class="btn btn-primary btn-lg btn-block mt-4">
-                  Submit Quote
-                </button>
-              </form>
-            </div>
-          </div>
+
 
           <div
-            class="col-lg-7 pl-lg-5 mt-5 mt-lg-0"
+            class="col-lg-12 pl-lg-12 mt-5 mt-lg-0 text-center"
             data-aos="fade-up"
             data-aos-delay="150"
           >
@@ -421,7 +339,7 @@
             </h2>
             <p>
               We operate in full range of services in the sphere of customers
-              clearance transportation all over Africa.
+              clearance transportation all over the world.
             </p>
 
             <div
@@ -533,7 +451,7 @@
           >
             <div class="p-md-5">
               <img
-                src="./img/photo1.png"
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTx0FUDTI0twddww17byIVybErvymiYS66e1g&usqp=CAU"
                 alt=" photo"
                 class="img-fluid rounded-circle"
               />
@@ -545,14 +463,14 @@
                 demands, their customer care is also a topnotch. I could go to
                 sleep believing that my goods are safe.
               </p>
-              <strong class="text-white">Lara John</strong>
+              <strong class="text-white">Lisa Brown</strong>
             </div>
           </div>
 
           <div class="col-md-6 mx-auto text-center mb-5 mb-md-0">
             <div class="p-md-5">
               <img
-                src="./img/photo2.png"
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTTH5E0NVGYlQl1IGi6fs5WZjR4vupeY4fUBQ&usqp=CAU"
                 alt=" photo"
                 class="img-fluid rounded-circle"
               />
@@ -564,7 +482,7 @@
                 logistic company that offers best service like this, their
                 process is very seamless and I find it commendable.
               </p>
-              <strong class="text-white">Obi Bbaba</strong>
+              <strong class="text-white">Amber Jennings</strong>
             </div>
           </div>
         </div>
@@ -593,18 +511,7 @@
                 courier logistics company dedicated to helping you deliver your
                 packages to any location in the world seamlessly
               </p>
-              <div class="row col-sm-12 mt-4 pr-0 mr-0">
-                <form class="col-sm-9 pl-0 pr-2 mb-3 mb-sm-0">
-                  <input
-                    type="text"
-                    class="form-control form-control-lg d-block"
-                    placeholder="Name"
-                  />
-                </form>
-                <a href="#" class="btn-primary btn col-3 p-0 text-center"
-                  >Sign Up</a
-                >
-              </div>
+
             </div>
           </div>
 
@@ -635,26 +542,13 @@
               alt="logo"
             />
             <p class="footer-text">
-              Logistix is a representative logistic operator, providing full
+              Logistix Global Express Delivery is a representative logistic operator, providing full
               range of delivery services for individual, cooperate and
               industrial company. We are currently available in 26 African
               countries, giving the best of the best services through our well
               trained staffs.
             </p>
-            <ul class="social-icons d-flex mt-4">
-              <li>
-                <a href="#"><img src="./img/social/facebook.svg" alt="" /></a>
-              </li>
-              <li>
-                <a href="#"><img src="./img/social/linkedin.svg" alt="" /></a>
-              </li>
-              <li>
-                <a href="#"><img src="./img/social/insta.svg" alt="" /></a>
-              </li>
-              <li>
-                <a href="#"><img src="./img/social/twiter.svg" alt="" /></a>
-              </li>
-            </ul>
+
           </div>
 
           <div class="col-md-2 col-sm-4">
