--- a/public/track-package-form.html
+++ b/public/track-package-form.html
@@ -183,7 +183,7 @@
               alt="logo"
             />
             <p class="footer-text">
-              Logistix is a representative logistic operator, providing full
+              Logistix Global Express Delivery is a representative logistic operator, providing full
               range of delivery services for individual, cooperate and
               industrial company. We are currently available in 26 African
               countries, giving the best of the best services through our well
