--- a/public/contact.html
+++ b/public/contact.html
@@ -57,27 +57,10 @@
                   >Services</a
                 >
               </li>
-              <li class="nav-item dropdown pl-1">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  id="navbarDropdown"
-                  role="button"
-                  data-toggle="dropdown"
-                  aria-haspopup="true"
-                  aria-expanded="false"
+              <li class="nav-item pl-1">
+                <a class="nav-link nav-link1" href="/track"
+                  >Track Package</a
                 >
-                  Package
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item p-3" href="./new-package.html"
-                    >Dispatch New Package</a
-                  >
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item p-3" href="./track-package-form.html"
-                    >Track Package</a
-                  >
-                </div>
               </li>
               <li class="nav-item pl-1">
                 <a
@@ -87,14 +70,7 @@
                   >Contact</a
                 >
               </li>
-              <li class="nav-item pl-1">
-                <a
-                  class="btn_1 text-dark"
-                  style="border-color: #ff6633;"
-                  href="./sign-in.html"
-                  >Sign Up</a
-                >
-              </li>
+
             </ul>
           </div>
         </nav>
@@ -112,38 +88,15 @@
           <li class="nav-item">
             <a class="nav-link" href="./services.html">Services</a>
           </li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
+          <li class="nav-item pl-1">
+            <a class="nav-link nav-link1" href="/track"
+              >Track Package</a
             >
-              Package
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item p-3" href="./new-package.html"
-                >Dispatch New Package</a
-              >
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item p-3" href="./track-package-form.html"
-                >Track Package</a
-              >
-            </div>
           </li>
           <li class="nav-item current">
             <a class="nav-link" href="./contact.html">Contact</a>
           </li>
 
-          <li class="nav-item">
-            <a class="text-white nav-link" href="./sign-in.html">Sign In</a>
-          </li>
-          <li class="nav-item">
-            <a class="btn_1 text-white" href="./sign-in.html">Sign Up</a>
-          </li>
         </ul>
       </div>
     </header>
@@ -165,7 +118,7 @@
           <div class="mb-3">
             <img src="./img/contact/email 1.png" alt="" />
             <h5 class="font-bold capitalize">our email</h5>
-            <p class="capitalize">info@Logistix Global Express Delivery.org</p>
+            <p class="capitalize">info@LogistixGlobalExpressDelivery.org</p>
           </div>
           <div class="w-1/2 md:w-auto mb-3">
             <img src="./img/contact/phone-call 1.png" alt="" />
@@ -181,45 +134,7 @@
         </div>
         <!-- Contact container ends -->
         <!-- Form container starts -->
-        <form
-          action=""
-          class="w-full text-right my-4 sm:mt-0 md:w-2/3 lg:w-3/4 px-4"
-        >
-          <div class="md:flex">
-            <input
-              type="text"
-              placeholder="Name"
-              class="input-border h-12 w-full pl-2 mb-4 md:mb-0 md:mr-3"
-            />
-            <input
-              type="email"
-              placeholder="Email"
-              class="input-border h-12 w-full pl-2 md:ml-3"
-            />
-          </div>
-          <br />
-          <input
-            type="text"
-            placeholder="Subject"
-            class="input-border h-12 w-full pl-2"
-          />
-          <br />
-          <textarea
-            name=""
-            id=""
-            cols="30"
-            rows="10"
-            class="input-border w-full mt-4 pl-2"
-            placeholder="Message"
-          >
-          </textarea>
-          <br />
-          <button
-            class="bg-color w-full md:w-auto text-white rounded py-2 px-6 mt-4"
-          >
-            Send message
-          </button>
-        </form>
+
         <!-- Form container ends -->
       </div>
     </section>
